--- a/detail.html
+++ b/detail.html
@@ -360,14 +360,14 @@
 			<section class="footer">
 				<div class="ask-online">
 					<img src="asserts/img/电话-无底@3x.png"/>
-					在线咨询
+					<span>在线咨询</span>
 				</div>
 				<div class="ask-phone">
 					<img src="asserts/img/电话-无底@3x.png"/>
-					电话咨询
+					<span>在线咨询</span>
 				</div>
 				<div class="submit">
-					去申请
+					<span>在线咨询</span>
 				</div>
 			</section>
 		</main>
